crates/wt-cli/src/snapshots/wt_cli__ssh__tests__host_world_known_hosts.snap
---
source: crates/wt-cli/src/ssh.rs
expression: known_hosts
---
# Generated by wt. Do not edit.
local.ubuntu ssh-ed25519 AAAAHOST
