crates/wt-cli/src/snapshots/wt_cli__ssh__tests__host_world_ssh_config.snap
---
source: crates/wt-cli/src/ssh.rs
expression: "normalize_home(&config, temp.path())"
---
# Generated by wt. Do not edit.

Host local.ubuntu
  HostName 192.0.2.3
  User wt
  Port 22
  HostKeyAlias local.ubuntu
  UserKnownHostsFile "[HOME]/.ssh/wt/contexts/local/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ForwardAgent yes
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.ubuntu' /usr/local/bin/wt-host-shell

Host local.ubuntu-vs
  HostName 192.0.2.3
  User wt
  Port 22
  HostKeyAlias local.ubuntu
  UserKnownHostsFile "[HOME]/.ssh/wt/contexts/local/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ForwardAgent yes
