crates/wt-cli/src/snapshots/wt_cli__ssh__tests__setup_world_known_hosts.snap
---
source: crates/wt-cli/src/ssh.rs
expression: known_hosts
---
# Generated by wt sync. Do not edit.
local.repo-feature-host ssh-ed25519 AAAATEST
