crates/wt-cli/src/snapshots/wt_cli__ssh__tests__static_world_server_proxy_config.snap
---
source: crates/wt-cli/src/ssh.rs
expression: "normalize_home(&managed, temp.path())"
---
# Generated by wt sync. Do not edit.

Host lab.static-host
  HostName wt-static
  User wt
  Port 22
  HostKeyAlias lab.static-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -- wt-server wt-server proxy wt-0123456789abcdef

Host lab.static
  HostName wt-static
  User wt
  Port 22
  HostKeyAlias lab.static-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -- wt-server wt-server proxy wt-0123456789abcdef
  RequestTTY force
  RemoteCommand /usr/local/bin/wt-app-shell

Host lab.static-vs lab.static-vc
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias lab.static-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" lab.static-host /usr/local/bin/wt-app-proxy

Host static-host
  HostName wt-static
  User wt
  Port 22
  HostKeyAlias lab.static-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -- wt-server wt-server proxy wt-0123456789abcdef

Host static
  HostName wt-static
  User wt
  Port 22
  HostKeyAlias lab.static-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -- wt-server wt-server proxy wt-0123456789abcdef
  RequestTTY force
  RemoteCommand /usr/local/bin/wt-app-shell

Host static-vs static-vc
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias lab.static-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" lab.static-host /usr/local/bin/wt-app-proxy
