crates/wt-cli/src/snapshots/wt_cli__ssh__tests__updated_world_known_hosts.snap
---
source: crates/wt-cli/src/ssh.rs
expression: known_hosts
---
# Generated by wt sync. Do not edit.
local.repo-feature-host ssh-ed25519 AAAAREPLACEMENT
local.repo-feature-vs ssh-ed25519 AAAAAPPLICATION
